--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8083
-server.ssl.key-store: keystore.p12
-server.ssl.key-store-password: password
-server.ssl.keyStoreType: PKCS12
-server.ssl.keyAlias: tomcat
+security.require-ssl=true
+server.ssl.key-store=keystore.jks
+server.ssl.key-store-password=password
+server.ssl.keyAlias=tomcat
