add new enpoint for current logged user nickname

--- a/src/main/resources/mongo.properties
+++ b/src/main/resources/mongo.properties
@@ -3,5 +3,5 @@ mongo.url=localhost
 #mongo.url=192.168.99.100
 mongo.port=27019
 #mongo.port=27017
-#mongo.db=project
-mongo.db=projectai
+mongo.db=project
+#mongo.db=projectai
