--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 	</properties>
 
 	<dependencies>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -50,6 +51,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -62,6 +64,6 @@
 	</build>
 
 
-	<description>profile-module handle the RESTful API about:
-- retrieve all profile information;</description>
+	<description>Profile Microservice</description>
+	
 </project>
